--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>Catriona</title>
-  <script src="node_modules/phaser/dist/phaser.js"></script>
   <style type="text/css">
   body {
     margin: 0;
@@ -11,6 +10,6 @@
   </style>
 </head>
 <body>
-  <script type="text/javascript" src="src/js/game.js"></script>
+  <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
