--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Catriona</title>
-  <style type="text/css">
-  body {
-    margin: 0;
-  }
-  </style>
-</head>
-<body>
-  <script type="text/javascript" src="bundle.js"></script>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>MOOD</title>
+    <script type="text/javascript" src="lib/phaser.js"></script></body>
+  </head>
+  <body>
+  <script type="text/javascript" src="bundle.js"></script></body>
 </html>
