--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>MOOD</title>
     <script type="text/javascript" src="lib/phaser.js"></script></body>
+    <link type="text/css" rel="stylesheet" href="css/game.css">
   </head>
   <body>
-  <script type="text/javascript" src="bundle.js"></script></body>
+    <div id="game-container"></div>
+    <script type="text/javascript" src="bundle.js"></script>
+  </body>
 </html>
